fix: uuid code generation
