# _examples/uuidcheck/api/apidocs.swagger.json
@@ -19,6 +19,38 @@
     "application/json"
   ],
   "paths": {
+    "/googleuuid.v1.GoogleuuidService/CreateLocationTransactions": {
+      "post": {
+        "operationId": "GoogleuuidService_CreateLocationTransactions",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/googleuuidv1CreateLocationTransactionsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/googleuuidv1CreateLocationTransactionsRequest"
+            }
+          }
+        ],
+        "tags": [
+          "GoogleuuidService"
+        ]
+      }
+    },
     "/googleuuid.v1.GoogleuuidService/CreateProduct": {
       "post": {
         "operationId": "GoogleuuidService_CreateProduct",
@@ -240,6 +272,38 @@
         ],
         "tags": [
           "GoogleuuidService"
+        ]
+      }
+    },
+    "/pguuid.v1.PguuidService/CreateLocationTransactions": {
+      "post": {
+        "operationId": "PguuidService_CreateLocationTransactions",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pguuidv1CreateLocationTransactionsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pguuidv1CreateLocationTransactionsRequest"
+            }
+          }
+        ],
+        "tags": [
+          "PguuidService"
         ]
       }
     },
@@ -469,6 +533,26 @@
     }
   },
   "definitions": {
+    "googleuuidv1CreateLocationTransactionsRequest": {
+      "type": "object",
+      "properties": {
+        "column1": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "column2": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "googleuuidv1CreateLocationTransactionsResponse": {
+      "type": "object"
+    },
     "googleuuidv1CreateProductRequest": {
       "type": "object",
       "properties": {
@@ -665,6 +749,26 @@
           "type": "string"
         }
       }
+    },
+    "pguuidv1CreateLocationTransactionsRequest": {
+      "type": "object",
+      "properties": {
+        "column1": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "column2": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "pguuidv1CreateLocationTransactionsResponse": {
+      "type": "object"
     },
     "pguuidv1CreateProductRequest": {
       "type": "object",
